# AI_IDE

./: .bacon-locations  .commitlintrc.js  .env.development  .env.example  .env.production  .env.staging  .gitattributes  .gitignore  .gitignore.bak  .gitlab-ci.yml  .markdownlint.json  .pre-commit-config.yaml  .rumdl.toml  AGENTS.md  AI_ML_OPTIMIZATION_DESIGN.md  Audit Report.md  BUILD_OPTIMIZATION_README.md  Best_AI_Rust_IDE.md  Best_Rust_IDE.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  Cargo.toml.baseline  ENVIRONMENT_VARIABLES.md  ERROR_FIXES_SUMMARY.md  INSTALL.md  LICENSE  Makefile  NEW_finalPLAN.md  PERFORMANCE_MEMORY_DESIGN.md  README.md  RUST_AI_IDE_PLAN.md  SECURITY.md  SECURITY_AUDIT_README.md  SECURITY_COMPLIANCE_ARCHITECTURE_DESIGN.md  SECURITY_NOTIFICATIONS.md  TESTING.md  TESTING_FRAMEWORK_README.md  VICTORY_REPORT.md  WINDS_OF_CHANGE_REPORT.md  (+351 more)
archived/rust-ai-ide-test-utils/: Cargo.toml
archived/rust-ai-ide-test-utils/src/: helpers.rs  lib.rs
crates/rust-ai-ide-advanced-memory/: Cargo.toml
crates/rust-ai-ide-advanced-memory/src/: garbage_collection.rs  lib.rs  memory_leak_detection.rs  memory_mapped_operations.rs  resource_monitoring.rs  virtual_memory.rs
crates/rust-ai-ide-advanced-refactoring/: Cargo.toml  README.md
crates/rust-ai-ide-advanced-refactoring/benches/: execution_orchestration_benchmark.rs  impact_assessment_performance.rs  refactoring_suggestion_benchmark.rs  safety_guard_performance.rs  transformation_validation_benchmark.rs
crates/rust-ai-ide-advanced-refactoring/src/: ai_suggester.rs  confidence_scorer.rs  context_analyzer.rs  engine.rs  error.rs  execution_orchestrator.rs  impact_assessor.rs  lib.rs  pattern_recognizer.rs  safety_filter.rs  safety_guard.rs  suggestion_generator.rs  transformation_validator.rs  types.rs
crates/rust-ai-ide-ai/: Cargo.toml  README.md
crates/rust-ai-ide-ai-analysis/: Cargo.toml  README.md
crates/rust-ai-ide-ai-analysis/examples/: ai_analysis_demo.rs
crates/rust-ai-ide-ai-analysis/src/: architecture_analyzer.rs  code_quality_checker.rs  error_handling.rs  lib.rs  multi_ast.rs  pattern_recognition.rs  performance_analyzer.rs  security_scanner.rs  utils.rs
crates/rust-ai-ide-ai-analysis/tests/: ai_analysis_integration.rs  analysis_integration_tests.rs  predictive_quality_tests.rs
crates/rust-ai-ide-ai-codegen/: Cargo.toml
crates/rust-ai-ide-ai-codegen/src/: architectural.rs  cache.rs  code_generation.rs  code_generation_demo.rs  code_generation_tests.rs  completion.rs  document_gen.rs  error.rs  function_generation.rs  language_specific.rs  lib.rs  performance.rs  quality_assurance.rs  security.rs  test_generation.rs  types.rs  validation.rs
crates/rust-ai-ide-ai-distributed-coordinator/: Cargo.toml
crates/rust-ai-ide-ai-distributed-coordinator/src/: lib.rs  load_balancer.rs  metrics.rs
crates/rust-ai-ide-ai-inference/: Cargo.toml
crates/rust-ai-ide-ai-inference/src/: inference.rs  lib.rs  loaders.rs  lru_model_manager.rs  model_handle.rs  model_loader.rs  natural_language_to_code.rs  predictive_completion.rs  registry.rs  resource_monitor.rs  resource_types.rs  types.rs  unloading_policies.rs  zero_copy_models.rs
crates/rust-ai-ide-ai-integration/: Cargo.toml
crates/rust-ai-ide-ai-integration/src/: bridge.rs  errors.rs  frontend.rs  layer.rs  lib.rs  metrics.rs  router.rs  types.rs
crates/rust-ai-ide-ai-learning/: Cargo.toml
crates/rust-ai-ide-ai-learning/src/: README.md  benchmarks.rs  database.rs  hyperparameter_tuning.rs  integration_tests.rs  lib.rs  model_performance_profiling.rs  models.rs  performance_profile.rs  preferences.rs  similarity.rs  statistics.rs  system.rs  types.rs
crates/rust-ai-ide-ai-multimodal/: Cargo.toml
crates/rust-ai-ide-ai-multimodal/src/: audio.rs  errors.rs  lib.rs  metrics.rs  multimodal.rs  types.rs  vision.rs
crates/rust-ai-ide-ai-orchestration-core/: Cargo.toml
crates/rust-ai-ide-ai-orchestration-core/src/: lib.rs
crates/rust-ai-ide-ai-predictive/: Cargo.toml
crates/rust-ai-ide-ai-predictive/src/: lib.rs  predictive_development.rs
crates/rust-ai-ide-ai-quantization/: Cargo.toml
crates/rust-ai-ide-ai-quantization/src/: benchmark.rs  context_window.rs  gguf_optimization.rs  integration.rs  lib.rs  memory_manager.rs  orchestration_integration.rs  quantizer.rs  validation.rs
crates/rust-ai-ide-ai-refactoring/: Cargo.toml
crates/rust-ai-ide-ai-security/: Cargo.toml
crates/rust-ai-ide-ai-specgen/: Cargo.toml
crates/rust-ai-ide-ai-sql-lsp/: Cargo.toml  PERFORMANCE_RESULTS.md  README.md
crates/rust-ai-ide-ai1-architecture/: Cargo.toml
crates/rust-ai-ide-ai1-reviews/: Cargo.toml
crates/rust-ai-ide-ai1-security/: Cargo.toml
crates/rust-ai-ide-ai1-semantic/: Cargo.toml
crates/rust-ai-ide-ai2-cloud-native/: Cargo.toml
crates/rust-ai-ide-ai2-ml-management/: Cargo.toml
integration-tests/: Cargo.toml
integration-tests/src/: ai_capability_validation.rs  ai_ml_integration.rs  bridge.rs  common.rs  comprehensive_test_runner.rs  coverage_analysis.rs  coverage_validation.rs  e2e_user_workflows.rs  enterprise_security_validation.rs  error.rs  lib.rs  lsp_integration.rs  performance_gates.rs  performance_validation.rs  quality_gates.rs  startup_performance.rs  tauri_command_integration.rs  test_config.rs  test_runner.rs  types.rs  ui_test_scenarios.rs  ui_testing.rs  zero_copy_integration.rs
integration_example/: Cargo.toml  Makefile  README.md
integration_example/integration_test/: Cargo.toml
integration_example/src/: bridge.rs  error.rs  lib.rs  types.rs
src-tauri/: Cargo.toml  app_lib.long-type-16358717655817789272.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command_templates.rs  enhanced_file_watcher.rs  errors.rs  file_watcher.rs  infra.rs  init.rs  integration.rs  lib.rs  state.rs  utils.rs
src-tauri/tests/: integration_tests.rs  update_dependency_features_test.rs
test-performance-analyzer/: Cargo.toml  test-performance-project
test-performance-analyzer/src/: lib.rs  main.rs
test-performance-project/: Cargo.toml
test-performance-project/src/: lib.rs  main.rs
(+8747 files in other folders)
